Trying to fix submit button spacing

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ input.submit{
 	font-size: 1.6em;
 	margin-top: 20px;
 	margin-right: auto;
-	margin-left: auto;
+	margin-left: 5px;
 }
 
 input.cat{
